# goph420_w2024_lab02_stAR

./: README.md  pyproject.toml
examples/: driver_probability.py  driver_roots.py  driver_seismic.py
src/goph420_lab01.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/goph420_lab02/: integration.py  rootFunctions.py
src/goph420_lab02.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_gauss_legendre.py  test_newton_cotes.py  test_newton_raphson.py  test_secant_modified.py
